--- a/profile.html
+++ b/profile.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from hixstudio.net/tphtml/ebazer/profile.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 22 Oct 2023 00:28:43 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eBazer - Tailwind CSS eCommerce Admin Template</title>
+    <title>Kachabazar</title>
     <link rel="shortcut icon" href="assets/img/logo/favicon.png" type="image/x-icon">
 
     <!-- css links -->
@@ -133,10 +131,7 @@
                             </a>
                             <ul x-show="nav == 4" class="pl-[42px] pr-[20px] pb-3">
                                 <li>
-                                    <a href="order-list.html" class="block font-normal w-full text-[#6D6F71] hover:text-theme nav-dot">Orders List</a>
-                                </li>
-                                <li>
-                                    <a href="order-details.html" class="block font-normal w-full text-[#6D6F71] hover:text-theme nav-dot">Order Details</a>
+                                    <a href="order-list.html" class="block font-normal w-full text-[#6D6F71] hover:text-theme nav-dot">Orders</a>
                                 </li>
                                 <li>
                                     <a href="transaction.html" class="block font-normal w-full text-[#6D6F71] hover:text-theme nav-dot">Transactions</a>
@@ -401,8 +396,8 @@
                                         <img class="w-[50px] h-[50px] rounded-md" src="assets/img/users/user-10.jpg" alt="">
                                     </div>
                                     <div class="">
-                                        <h5 class="text-base mb-1 leading-none">Shahnewaz</h5>
-                                        <p class="mb-0 text-tiny leading-none">shahnewaz@mail.com</p>
+                                        <h5 class="text-base mb-1 leading-none">Adeagbo Josiah</h5>
+                                        <p class="mb-0 text-tiny leading-none">speedafhost@gmail.com</p>
                                     </div>
                                 </div>
                                 <ul>
@@ -485,7 +480,7 @@
                             </label>
                         </div>
                         <div class="">
-                            <h5 class="text-xl mb-0">Shahnewaz Sakil</h5>
+                            <h5 class="text-xl mb-0">Adeagbo Josiah</h5>
                             <p class="text-tiny mb-0">Bringing knowledge to your fingertips with AI assistance</p>
                         </div>
                     </div>
@@ -501,21 +496,21 @@
                                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-5">
                                         <div class="mb-5">
                                             <p class="mb-0 text-base text-black">First Name </p>
-                                            <input class="input w-full h-[49px] rounded-md border border-gray6 px-6 text-base text-black" type="text" placeholder="Name" value="Shahnewaz">
+                                            <input class="input w-full h-[49px] rounded-md border border-gray6 px-6 text-base text-black" type="text" placeholder="Name" value="Josiah">
                                         </div>
                                         <div class="mb-5">
                                             <p class="mb-0 text-base text-black">Last Name </p>
-                                            <input class="input w-full h-[49px] rounded-md border border-gray6 px-6 text-base text-black" type="text" placeholder="Name" value="Sakil">
+                                            <input class="input w-full h-[49px] rounded-md border border-gray6 px-6 text-base text-black" type="text" placeholder="Name" value="Adeagbo">
                                         </div>
                                     </div>
                                     <div class="mb-5">
                                         <p class="mb-0 text-base text-black">Email </p>
-                                        <input class="input w-full h-[49px] rounded-md border border-gray6 px-6 text-base text-black" type="email" placeholder="Email" value="shahnewaz@mail.com">
+                                        <input class="input w-full h-[49px] rounded-md border border-gray6 px-6 text-base text-black" type="email" placeholder="Email" value="speedafhost@g.com">
                                     </div>
                                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-5">
                                         <div class="mb-5">
                                             <p class="mb-0 text-base text-black">Phone </p>
-                                            <input class="input w-full h-[49px] rounded-md border border-gray6 px-6 text-base text-black" type="text" placeholder="Phone" value="+9542 145 657">
+                                            <input class="input w-full h-[49px] rounded-md border border-gray6 px-6 text-base text-black" type="text" placeholder="Phone" value="+234 808 888 6823">
                                         </div>
                                         <div class="mb-5 profile-gender-select select-bordered">
                                             <p class="mb-0 text-base text-black">Gender </p>
