--- a/product-list.html
+++ b/product-list.html
@@ -357,8 +357,8 @@
                                         <img class="w-[50px] h-[50px] rounded-md" src="assets/img/users/user-10.jpg" alt="">
                                     </div>
                                     <div class="">
-                                        <h5 class="text-base mb-1 leading-none">Shahnewaz</h5>
-                                        <p class="mb-0 text-tiny leading-none">shahnewaz@mail.com</p>
+                                        <h5 class="text-base mb-1 leading-none">Adeagbo Josiah</h5>
+                                        <p class="mb-0 text-tiny leading-none">speedafhost@mail.com</p>
                                     </div>
                                 </div>
                                 <ul>
@@ -497,7 +497,7 @@
                                         </div>
                                     </td>
                                     <td  class="pr-8 py-5 whitespace-nowrap">
-                                        <a href="#" class="flex items-center space-x-5">
+                                        <a href="product-details.html" class="flex items-center space-x-5">
                                             <img class="w-[60px] h-[60px] rounded-md" src="assets/img/product/prodcut-1.jpg" alt="">
                                             <span class="font-medium text-heading text-hover-primary transition">Whitetails Women's Open Sky</span>
                                         </a>
