--- a/product-list.html
+++ b/product-list.html
@@ -569,7 +569,7 @@
                                         </div>
                                     </td>
                                     <td  class="pr-8 py-5 whitespace-nowrap">
-                                        <a href="#" class="flex items-center space-x-5">
+                                        <a href="product-details.html" class="flex items-center space-x-5">
                                             <img class="w-[60px] h-[60px] rounded-md" src="assets/img/product/prodcut-2.jpg" alt="">
                                             <span class="font-medium text-heading text-hover-primary transition">Simple Modern School Boys</span>
                                         </a>
@@ -641,7 +641,7 @@
                                         </div>
                                     </td>
                                     <td  class="pr-8 py-5 whitespace-nowrap">
-                                        <a href="#" class="flex items-center space-x-5">
+                                        <a href="product-details.html" class="flex items-center space-x-5">
                                             <img class="w-[60px] h-[60px] rounded-md" src="assets/img/product/prodcut-3.jpg" alt="">
                                             <span class="font-medium text-heading text-hover-primary transition">Women's Essentials Convertible</span>
                                         </a>
@@ -713,7 +713,7 @@
                                         </div>
                                     </td>
                                     <td  class="pr-8 py-5 whitespace-nowrap">
-                                        <a href="#" class="flex items-center space-x-5">
+                                        <a href="product-details.html" class="flex items-center space-x-5">
                                             <img class="w-[60px] h-[60px] rounded-md" src="assets/img/product/prodcut-4.jpg" alt="">
                                             <span class="font-medium text-heading text-hover-primary transition">Calvin Klein Gabrianna Novelty</span>
                                         </a>
@@ -785,7 +785,7 @@
                                         </div>
                                     </td>
                                     <td  class="pr-8 py-5 whitespace-nowrap">
-                                        <a href="#" class="flex items-center space-x-5">
+                                        <a href="product-details.html" class="flex items-center space-x-5">
                                             <img class="w-[60px] h-[60px] rounded-md" src="assets/img/product/prodcut-5.jpg" alt="">
                                             <span class="font-medium text-heading text-hover-primary transition">Tommy Hilfiger Women’s Jaden</span>
                                         </a>
@@ -857,7 +857,7 @@
                                         </div>
                                     </td>
                                     <td  class="pr-8 py-5 whitespace-nowrap">
-                                        <a href="#" class="flex items-center space-x-5">
+                                        <a href="product-details.html" class="flex items-center space-x-5">
                                             <img class="w-[60px] h-[60px] rounded-md" src="assets/img/product/prodcut-6.jpg" alt="">
                                             <span class="font-medium text-heading text-hover-primary transition">Govicta Men's Shoes Leather</span>
                                         </a>
@@ -929,7 +929,7 @@
                                         </div>
                                     </td>
                                     <td  class="pr-8 py-5 whitespace-nowrap">
-                                        <a href="#" class="flex items-center space-x-5">
+                                        <a href="product-details.html" class="flex items-center space-x-5">
                                             <img class="w-[60px] h-[60px] rounded-md" src="assets/img/product/prodcut-7.jpg" alt="">
                                             <span class="font-medium text-heading text-hover-primary transition">Legendary Whitetails Men's.</span>
                                         </a>
