--- a/product-list.html
+++ b/product-list.html
@@ -538,8 +538,10 @@
                                                 </svg>
                                                 </button>
                                                 <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
-                                                    <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
+                                                    <a href="edit-product.html">
+                                                        <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                     <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
+                                                    </a>
                                                 </div>
                                             </div>
                                             <div class="relative" x-data="{ deleteTooltip: false }">
