--- a/category.html
+++ b/category.html
@@ -359,8 +359,8 @@
                                         <img class="w-[50px] h-[50px] rounded-md" src="assets/img/users/user-10.jpg" alt="">
                                     </div>
                                     <div class="">
-                                        <h5 class="text-base mb-1 leading-none">Shahnewaz</h5>
-                                        <p class="mb-0 text-tiny leading-none">shahnewaz@mail.com</p>
+                                        <h5 class="text-base mb-1 leading-none">Adeagbo Josiah</h5>
+                                        <p class="mb-0 text-tiny leading-none">speedafhost@mail.com</p>
                                     </div>
                                 </div>
                                 <ul>
@@ -530,7 +530,7 @@
                                                     #479063DR 
                                                 </td>
                                                 <td  class="pr-8 py-5 whitespace-nowrap">
-                                                    <a href="#" class="flex items-center space-x-5">
+                                                    <a href="category-details.html" class="flex items-center space-x-5">
                                                         <img class="w-10 h-10 rounded-full" src="assets/img/product/prodcut-1.jpg" alt="">
                                                         <span class="font-medium text-heading text-hover-primary transition">Fashion</span>
                                                     </a>
@@ -547,7 +547,8 @@
                                                 <td class="px-9 py-3 text-end">
                                                     <div class="flex items-center justify-end space-x-2">
                                                         <div class="relative" x-data="{ editTooltip: false }">
-                                                            <button 
+                                                            <a href="edit-category.html">
+                                                                <button 
                                                             class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                             x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                             >
@@ -556,6 +557,7 @@
                                                                 <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                             </svg>
                                                             </button>
+                                                            </a>
                                                             <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                                 <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                                 <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
@@ -591,7 +593,7 @@
                                                     #479063DR 
                                                 </td>
                                                 <td  class="pr-8 py-5 whitespace-nowrap">
-                                                    <a href="#" class="flex items-center space-x-5">
+                                                    <a href="category-details.html" class="flex items-center space-x-5">
                                                         <img class="w-10 h-10 rounded-full" src="assets/img/product/prodcut-2.jpg" alt="">
                                                         <span class="font-medium text-heading text-hover-primary transition">Bags</span>
                                                     </a>
@@ -608,7 +610,8 @@
                                                 <td class="px-9 py-3 text-end">
                                                     <div class="flex items-center justify-end space-x-2">
                                                         <div class="relative" x-data="{ editTooltip: false }">
-                                                            <button 
+                                                            <a href="edit-category.html">
+                                                                <button 
                                                             class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                             x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                             >
@@ -617,6 +620,7 @@
                                                                 <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                             </svg>
                                                             </button>
+                                                            </a>
                                                             <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                                 <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                                 <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
@@ -652,7 +656,7 @@
                                                     #479063DR 
                                                 </td>
                                                 <td  class="pr-8 py-5 whitespace-nowrap">
-                                                    <a href="#" class="flex items-center space-x-5">
+                                                    <a href="category-details.html" class="flex items-center space-x-5">
                                                         <img class="w-10 h-10 rounded-full" src="assets/img/product/prodcut-3.jpg" alt="">
                                                         <span class="font-medium text-heading text-hover-primary transition">Shoes</span>
                                                     </a>
@@ -669,7 +673,8 @@
                                                 <td class="px-9 py-3 text-end">
                                                     <div class="flex items-center justify-end space-x-2">
                                                         <div class="relative" x-data="{ editTooltip: false }">
-                                                            <button 
+                                                            <a href="edit-category.html">
+                                                                <button 
                                                             class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                             x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                             >
@@ -678,6 +683,7 @@
                                                                 <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                             </svg>
                                                             </button>
+                                                            </a>
                                                             <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                                 <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                                 <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
@@ -713,7 +719,7 @@
                                                     #479063DR 
                                                 </td>
                                                 <td  class="pr-8 py-5 whitespace-nowrap">
-                                                    <a href="#" class="flex items-center space-x-5">
+                                                    <a href="category-details.html" class="flex items-center space-x-5">
                                                         <img class="w-10 h-10 rounded-full" src="assets/img/product/prodcut-7.jpg" alt="">
                                                         <span class="font-medium text-heading text-hover-primary transition">Jackes</span>
                                                     </a>
@@ -774,7 +780,7 @@
                                                     #479063DR 
                                                 </td>
                                                 <td  class="pr-8 py-5 whitespace-nowrap">
-                                                    <a href="#" class="flex items-center space-x-5">
+                                                    <a href="category-details.html" class="flex items-center space-x-5">
                                                         <img class="w-10 h-10 rounded-full" src="assets/img/product/prodcut-12.jpg" alt="">
                                                         <span class="font-medium text-heading text-hover-primary transition">Shirts</span>
                                                     </a>
@@ -791,7 +797,8 @@
                                                 <td class="px-9 py-3 text-end">
                                                     <div class="flex items-center justify-end space-x-2">
                                                         <div class="relative" x-data="{ editTooltip: false }">
-                                                            <button 
+                                                            <a href="edit-category.html">
+                                                                <button 
                                                             class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                             x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                             >
@@ -800,6 +807,7 @@
                                                                 <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                             </svg>
                                                             </button>
+                                                            </a>
                                                             <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                                 <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                                 <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
