--- a/coupon.html
+++ b/coupon.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="assets/css/rangeslider.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
 </head>
 <body>
 
@@ -528,7 +530,8 @@
                                             <td class="px-9 py-3 text-end">
                                                 <div class="flex items-center justify-end space-x-2">
                                                     <div class="relative" x-data="{ editTooltip: false }">
-                                                        <button 
+                                                        <a href="edit-coupon.html">
+                                                            <button
                                                         class="w-10 h-10 leading-10 text-tiny bg-success text-white rounded-md hover:bg-green-600"
                                                         x-on:mouseenter="editTooltip = true" x-on:mouseleave="editTooltip = false"
                                                         >
@@ -537,13 +540,14 @@
                                                             <path fill="currentColor" d="m476.875 45.523438-30.164062-30.164063c-20.160157-20.160156-55.296876-20.140625-75.433594 0l-36.949219 36.949219 105.597656 105.597656 36.949219-36.949219c10.070312-10.066406 15.617188-23.464843 15.617188-37.714843s-5.546876-27.648438-15.617188-37.71875zm0 0"/>
                                                         </svg>
                                                         </button>
+                                                        </a>
                                                         <div x-show="editTooltip" class="flex flex-col items-center z-50 absolute left-1/2 -translate-x-1/2 bottom-full mb-1">
                                                             <span class="relative z-10 p-2 text-tiny leading-none font-medium text-white whitespace-no-wrap w-max bg-slate-800 rounded py-1 px-2 inline-block">Edit</span>
                                                             <div class="w-3 h-3 -mt-2 rotate-45 bg-black"></div>
                                                         </div>
                                                     </div>
                                                     <div class="relative" x-data="{ deleteTooltip: false }">
-                                                        <button 
+                                                        <button onclick="confirmDelete()"
                                                         class="w-10 h-10 leading-[33px] text-tiny bg-white border border-gray text-slate-600 rounded-md hover:bg-danger hover:border-danger hover:text-white"
                                                         x-on:mouseenter="deleteTooltip = true" x-on:mouseleave="deleteTooltip = false"
                                                         >
@@ -611,7 +615,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="relative" x-data="{ deleteTooltip: false }">
-                                                        <button 
+                                                        <button onclick="confirmDelete()"
                                                         class="w-10 h-10 leading-[33px] text-tiny bg-white border border-gray text-slate-600 rounded-md hover:bg-danger hover:border-danger hover:text-white"
                                                         x-on:mouseenter="deleteTooltip = true" x-on:mouseleave="deleteTooltip = false"
                                                         >
@@ -679,7 +683,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="relative" x-data="{ deleteTooltip: false }">
-                                                        <button 
+                                                        <button onclick="confirmDelete()"
                                                         class="w-10 h-10 leading-[33px] text-tiny bg-white border border-gray text-slate-600 rounded-md hover:bg-danger hover:border-danger hover:text-white"
                                                         x-on:mouseenter="deleteTooltip = true" x-on:mouseleave="deleteTooltip = false"
                                                         >
@@ -747,7 +751,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="relative" x-data="{ deleteTooltip: false }">
-                                                        <button 
+                                                        <button onclick="confirmDelete()"
                                                         class="w-10 h-10 leading-[33px] text-tiny bg-white border border-gray text-slate-600 rounded-md hover:bg-danger hover:border-danger hover:text-white"
                                                         x-on:mouseenter="deleteTooltip = true" x-on:mouseleave="deleteTooltip = false"
                                                         >
@@ -904,6 +908,8 @@
     <script src="assets/js/main.js"></script>
     
 </body>
-
+<script src="sweetAlert.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <!-- Mirrored from hixstudio.net/tphtml/ebazer/coupon.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 22 Oct 2023 00:28:43 GMT -->
 </html>
